[tool.pylint.format]
good-names = ["x", "y", "z", "i", "id", "ok"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "server/typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
name = "CapGen"
version = "0.1.0"
description = ""
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
faster-whisper = "^1.0.3"
nvidia-cudnn-cu12 = { version = "8.9.7.29", optional = true }
nvidia-cublas-cu12 = { version = "^12.6.3.3", optional = true }

[tool.poetry.group.server.dependencies]
granian = "^1.6.3"
litestar = "^2.12.1"
pydantic-settings = "^2.6.1"
uvloop = { version = "^0.21.0", markers = "sys_platform != 'win32'" }
picologging = "^0.9.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.387"
pylint = "^3.3.1"
pytest = "^8.3.3"
ruff = "^0.7.1"
httpx = "^0.27.2"

[tool.poetry.extras]
cuda = ["nvidia-cudnn-cu12", "nvidia-cublas-cu12"]

[tool.poetry.scripts]
capgen = "capgen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
