[project]
name = "CapGen"
version = "2.0.0"
description = "A fast CPU-based transcriber"
requires-python = ">=3.13.5, <3.14"

[dependency-groups]
dev = ["httpx>=0.28.1", "nodejs-wheel-binaries>=22.17.0", "pyright>=1.1.403", "pytest>=8.4.1", "ruff>=0.12.4"]

[tool.uv.workspace]
members = ["cli", "transcriber", "captions", "server"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "Q", "INP001", "PLC0414", "TC001", "PT013"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
