[project]
name = "CapGen"
version = "2.0.0"
description = "A fast CPU-based transcriber"
dependencies = [
    "fast-query-parsers>=1.0.3",
]

[tool.uv.workspace]
members = ["cli", "transcriber", "captions", "server"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "Q", "TC", "INP001", "PLC0414", "PT013"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
