[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[package]
name = "captions"
version = "0.1.0"
edition = "2024"

[lib]
name = "captions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"

[build-dependencies]
pyo3-build-config = { version = "0.27.2", features = ["resolve-config"] }
