[project]
name = "captions"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "nodejs-wheel-binaries>=24.13.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
exclude = ["**/uv.lock"]

[tool.pytest.ini_options]
pythonpath = ["."]
