[project]
name = "capgen-cli"
version = "0.1.0"
description = "CLI for CapGen"
requires-python = ">=3.8"
dependencies = ["transcriber", "captions"]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=22.20.0", "pyright>=1.1.407", "ruff>=0.14.5"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
capgen = "src:main"

[tool.uv.sources]
transcriber = { workspace = true }
captions = { workspace = true }

[tool.uv.build-backend]
module-root = ""
module-name = "src"
