[project]
name = "capgen-cli"
version = "0.1.0"
description = "CLI for CapGen"
requires-python = ">=3.8"
dependencies = ["transcriber", "captions"]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.13.1", "pyright>=1.1.408", "ruff>=0.15.1"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
capgen = "src:main"

[tool.uv.sources]
transcriber = { workspace = true }
captions = { workspace = true }

[tool.uv.build-backend]
module-root = ""
module-name = "src"
