[project]
name = "server"
version = "2.0.0"
requires-python = ">=3.14.3, <3.15"
dependencies = [
    "granian>=2.7.2",
    "litestar>=2.21.1",
    "pydantic-settings>=2.13.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "picologging>=0.9.3; python_version < '3.13'",
    "prometheus-client>=0.24.1",
    "aiohttp>=3.13.3",
    "transcriber",
    "captions",
    "fast-query-parsers>=1.0.3",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation-system-metrics>=0.59b0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "nodejs-wheel-binaries>=24.14.0", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.8"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
capgen = "src:main"

[tool.uv.sources]
transcriber = { workspace = true }
captions = { workspace = true }

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["flaky"]
