[project]
name = "transcriber"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "faster-whisper>=1.1.0",
    "faster-whisper>=1.1.1; python_version >= '3.9'",
    "tokenizers<0.21.0; python_version < '3.9'",
]

[project.optional-dependencies]
cuda = ["nvidia-cublas-cu12>=12.9.2.10"]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.15.0", "pyright>=1.1.409", "pytest>=9.0.3", "ruff>=0.15.12"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "transcriber"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["flaky"]
